Correccion de errores en SolicitudServicioController